--- a/dependencies/glad/CMakeLists.txt
+++ b/dependencies/glad/CMakeLists.txt
@@ -1,7 +1,5 @@
 
 include_directories(include)
 
-# add_executable(glad src/glad.c)
-
-add_library(glad SHARED src/glad.c)
+add_library(glad STATIC src/glad.c)
 target_include_directories(glad PUBLIC include)
