--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,8 @@ project(capstone)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread")
 
-find_package(glfw3 REQUIRED)
-include_directories(${GLFW_INCLUDE_DIRS})
-
-add_subdirectory(dependencies/glad)
+# find_package(XXX REQUIRED)
+# include_directories(${XXX_INCLUDE_DIRS})
 
 include_directories(include)
 
@@ -20,4 +18,4 @@ set(
 # Add project executable
 add_executable(${PROJECT_NAME} ${SOURCES})
 
-target_link_libraries(${PROJECT_NAME} PUBLIC glad glfw)
+target_link_libraries(${PROJECT_NAME} PUBLIC ${XXX_LIBRARIES})
